--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-	<title>FileAPI — a set of javascript tools for working with files.</title>
+	<title>FileAPI — 一套与文件的JavaScript工具.</title>
 
 	<meta name="keywords" content="FileAPI, upload, file, multipart, chunk, dragndrop, images, html5, rubaxa"/>
 	<meta name="description" content="The best library to upload files. Multiupload, drag'n'drop and chunked file upload. Images: crop, resize and auto orientation by EXIF."/>
@@ -40,12 +40,12 @@
 					<ul x:if="ctx.lang != 'ru'">
 						<li><a href="https://github.com/mailru/FileAPI">GitHub repository</a></li>
 						<li><a href="http://rubaxa.github.io/jquery.fileapi/">jQuery Plugin</a></li>
-						<li><a href="./examples/demo.html">Example #1: demo</a></li>
-						<li><a href="./examples/userpic.html">Example #2: userpic</a></li>
-						<li><a href="./examples/thumbnails.html">Example #3: thumbnails</a></li>
-						<li><a href="./examples/watermark.html">Example #4: watermark</a></li>
-						<li><a href="./examples/webcam.html">Example #5: webcam</a></li>
-						<li><a href="./examples/caman.html">Example #6: CamanJS</a></li>
+						<li><a href="./examples/demo.html">实例 #1: demo</a></li>
+						<li><a href="./examples/userpic.html">实例 #2: userpic</a></li>
+						<li><a href="./examples/thumbnails.html">实例 #3: thumbnails</a></li>
+						<li><a href="./examples/watermark.html">实例 #4: watermark</a></li>
+						<li><a href="./examples/webcam.html">实例 #5: webcam</a></li>
+						<li><a href="./examples/caman.html">实例 #6: CamanJS</a></li>
 						<li><a href="#ru/{{ctx.relpath}}">Русская версия</a></li>
 					</ul>
 				</div>
