--- a/tests/pure-resize-tests.html
+++ b/tests/pure-resize-tests.html
@@ -83,9 +83,9 @@
 </head>
 <body>
 <input type=file id="files" multiple=true accept="image/*" onchange="triggerTest()"/>
-&nbsp;Time to load: <span id="loadTime">n/a</span>ms
-&nbsp;Time to render: <span id="renderTime">n/a</span>ms
-&nbsp;Time to encode: <span id="encodeTime">n/a</span>ms
+&nbsp;加载时间: <span id="loadTime">n/a</span>ms
+&nbsp;渲染时间: <span id="renderTime">n/a</span>ms
+&nbsp;时间编码: <span id="encodeTime">n/a</span>ms
 <br/>
 
 <br/>
