--- a/examples/caman.html
+++ b/examples/caman.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<title>FileAPI :: CamanJS :: example</title>
+	<title>FileAPI :: JS：工程实例：</title>
 
 	<meta name="viewport" content="user-scalable=no, width=400, initial-scale=0.8, maximum-scale=0.8" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -65,10 +65,10 @@
 		<div style="padding: 5px 10px 10px">
 			<a href="../">&larr; index</a> |
 			<a href="./demo.html">demo</a> -
-			<a href="./userpic.html">userpic</a> -
-			<a href="./thumbnails.html">thumbnails</a> -
-			<a href="./watermark.html">watermark</a> -
-			<a href="./webcam.html">webcam</a> -
+			<a href="./userpic.html">用户的照片</a> -
+			<a href="./thumbnails.html">缩略图</a> -
+			<a href="./watermark.html">水印</a> -
+			<a href="./webcam.html">摄像头</a> -
 			<b>caman.js</b>
 		</div>
 	</div>
@@ -82,10 +82,10 @@
 		</div>
 
 		<div id="PresetFilters">
-			<a data-preset="vintage" class="Active">Vintage</a>
+			<a data-preset="vintage" class="Active">最佳的</a>
 			<a data-preset="lomo">Lomo</a>
 			<a data-preset="clarity">Clarity</a>
-			<a data-preset="sinCity">Sin City</a>
+			<a data-preset="sinCity">罪恶之城</a>
 			<a data-preset="sunrise">Sunrise</a>
 			<a data-preset="crossProcess">Cross Process</a>
 			<a data-preset="orangePeel">Orange Peel</a>
@@ -106,13 +106,13 @@
 
 	<div style="text-align: center; padding: 50px; clear: both; font-size: 20px;">
 		<div id="choose">
-			<label for="browse" class="btn">Select photo</label>
+			<label for="browse" class="btn">选择照片</label>
 			<input id="browse" type="file" accept="image/*" style="font-size: 20px; display: none;" />
 
 			<br/>
 			<br/>
 
-			<div id="openCam" class="btn">WebCam</div>
+			<div id="openCam" class="btn">摄像头</div>
 		</div>
 
 		<div id="photoBooth" style="visibility: hidden; position: absolute; overflow: hidden; height: 0">
@@ -168,7 +168,7 @@
 			});
 
 
-			// Open dialog
+			//打开对话框
 			FileAPI.event.on(browse, 'change', function (evt){
 				file = FileAPI.getFiles(evt)[0];
 
