--- a/tests/flash.html
+++ b/tests/flash.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<title>FileAPI :: Tests</title>
+	<title>FileAPI :: flash .实验</title>
 
 	<script>
 		var FileAPI = {
