--- a/tests/index.html
+++ b/tests/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<title>FileAPI :: Tests</title>
+	<title>FileAPI :: 测验</title>
 
 	<script>
 		var isPhantomJS = /phantomjs/i.test(navigator.userAgent);
