--- a/examples/watermark.html
+++ b/examples/watermark.html
@@ -94,7 +94,7 @@
 	</style>
 
 	<form style="padding: 10px;">
-		<h3>Select image:</h3>
+		<h3>选择图片:</h3>
 		<div class="btn js-fileapi-wrapper">
 			<input name="file" type="file" accept="image/*"/>
 		</div>
@@ -102,11 +102,11 @@
 		<div id="preview" style="display: none;">
 
 			<div class="col">
-				<h4>Watermark position</h4>
+				<h4>水印位置</h4>
 				<div id="pos" style="font-size: 12px;">
 				</div>
 
-				<h4>Output result</h4>
+				<h4>输出结果</h4>
 				<div id="output">
 					<label>
 						<input value="image/jpeg" type="radio" name="type"/>
@@ -125,12 +125,12 @@
 			</div>
 
 			<div class="col">
-				<h4>Preview <span id="preview-processing" class="anim" style="display: none">(processing&hellip;)</span></h4>
+				<h4>预习 <span id="preview-processing" class="anim" style="display: none">(processing&hellip;)</span></h4>
 				<div id="image"></div>
 			</div>
 
 			<div class="col" style="position: absolute; right: 10px;">
-				<h4>Server response <span id="uploading" class="anim" style="display: none"></span></h4>
+				<h4>服务器响应 <span id="uploading" class="anim" style="display: none"></span></h4>
 				<div id="server"></div>
 			</div>
 			<br clear="all"/>
@@ -167,7 +167,7 @@
 
 				document.getElementById('preview-processing').style.display = '';
 
-				// Create preview
+				//创建预览
 				FileAPI.Image(file)
 					.resize(300, 300, 'max')
 					.overlay(overlay)
@@ -188,8 +188,8 @@
 						  width: elms.width.value|0
 						, height: elms.height.value|0
 						, preview: true
-						, type: type // Output type
-						, overlay: overlay // Add watermark
+						, type: type //输出类型
+						, overlay: overlay // 加水印
 					}
 					, upload: function (){
 						document.getElementById('uploading').innerHTML = '(uploading&hellip;)';
@@ -220,13 +220,13 @@
 			}
 
 
-			// Relative position
+			// 相对位置
 			FileAPI.each(pos.getElementsByTagName('input'), function (el){
 				FileAPI.event.on(el, 'click', _updWatermark);
 			});
 
 
-			// Output type
+			//输出类型
 			FileAPI.each(output.getElementsByTagName('input'), function (el){
 				FileAPI.event.on(el, 'click', _updWatermark);
 			});
